# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: mytest.yml
gendiff/: __init__.py  generate_diff.py
gendiff/formatters/: formatter.py  json_format.py  plain.py  stylish.py
gendiff/modules/: generate_diff.py  make_tree.py  parser.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_formatters.py  test_generate_diff.py  test_helpers.py  test_json.py  test_plain_formatter.py  test_stringify.py  test_stylish.py
tests/fixtures/: json_result_nested.txt  json_result_plain.txt  nested_stringify.txt  nested_tree.json  plain_result_stringify.txt  plain_tree.json
